--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Todo List</title>
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <script src="assets/js/lib/jquery-2.1.4.min.js" charset="utf-8"></script>
     <script src="assets/js/main.js" charset="utf-8"></script>
   </head>
   <body>
 
     <div id="container">
-      <h1>To-Do List</h1>
-      <input type="text">
+      <h1>To-Do List<i class="fa fa-plus" aria-hidden="true"></i></h1>
+      <input type="text" placeholder="Add new ToDo" style="display: none;">
       <ul>
-        <li><span>X</span> Complete this Project</li>
-        <li><span>X</span> Complete this Course</li>
-        <li><span>X</span> Become Web Developer</li>
-        <li><span>X</span> Get Hired!</li>
+        <li class="completed"><span><i class="fa fa-trash-o" aria-hidden="true"></i></span> Complete this Project</li>
+        <li><span><i class="fa fa-trash-o" aria-hidden="true"></i></span> Get Hired!</li>
       </ul>
     </div>
 
